route_loggedin.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews-logged-in
spec:
  hosts:
    - reviews
  http:
  - match:
    - headers:
        end-user:
          regex: ^(?!\s*$).+
    route:
    - destination:
        host: reviews
        subset: v3
  - match:
    - headers:
        end-user:
          prefix: gold_
    route:
    - destination:
        host: reviews
        subset: v2
  - route:
    - destination:
        host: reviews
        subset: v1
